# boredom-lock

./: CMakeLists.txt  README.md  make_test.sh
src/: CMakeLists.txt  main.cpp  scheduler.cpp  tools.cpp  usbtracker.cpp
src/include/: scheduler.h  tools.h  usbtracker.h
test/: CMakeLists.txt  test.cpp
